--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,8 @@
 APP_PORT=4000
 BASE_URL=http://localhost:4000
-MONGO_URL=mongodb+srv://jaiharan1618:YNKKgbLXaXe2yLFK@cluster0.6nysn1r.mongodb.net/
+MONGO_URL=Ur_MongoDB_URL
+
+MAIL_USER=Ur_Mail_id
+MAIL_PASSWORD=Ur_APP_PASS
+MAIL_PORT=465
+MAIL_HOST=smtp.gmail.com
